# plib-web

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  dockerentrypoint.sh  manage.py  pyproject.toml
apps/users/: apps.py  models.py  signals.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  developer_urls.py  settings.py  urls.py  wsgi.py
frontend/: angular.json  package-lock.json  proxy.conf.js
frontend/src/: index.html
var/: .gitignore  README
var/media/: README
