[tool.poetry]
name = "plibweb"
version = "0.1.0"
description = "Proyecto para el servir la web del partido libertario en misiones."
authors = ["Francisco Del Roio <francipvb@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
psycopg2 = "^2.9.1"
daphne = "^3.0.2"
drf-spectacular = "^0.18.2"
whitenoise = "^5.3.0"
environs = {version = "^9.3.3", extras = ["django"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.4.0"
factory-boy = "^3.2.0"
black = "^21.8b0"
flake8-isort = "^4.0.0"
flake8-mypy = "^17.8.0"
flake8-black = "^0.2.3"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
